--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -82,87 +82,116 @@
                     <input type="submit" class="submit" value="SUBMIT">
                 </li>
             </ul>
-        </fobreadcrumps
+        </fobreadcrumps>
     </div>
-    <footer>
-        <section class="info">
-            <h2 class="info__title">Navigation</h2>
-            <ul class="info__list">
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">About Us</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Blog</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Design Services</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Featured On</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">2018 Holiday Catalog</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Shop By Designer</a>
-                </li>
-            </ul>
-        </section>
-        <section class="aside">
-            <h2 class="aside__">Customer Information</h2>
-            <ul class="aside__list">
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Contact Us</a>
-                </li>
-
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Sale Exclusions</a>
-                </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Shipping & Returns</a>
-                </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Terms & Conditions</a>
-                </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Privacy Policy</a>
-                </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Search</a>
-                </li>
-            </ul>
-        </section>
-        <section class="logo">
-            <h2 class="logo__title">Connect</h2>
-            <form class="logo__form">
-                <input type="email" name="email" class="logo__input" id="email" required>
-                <button type="submit" class="logo__btn">JOIN</button>
-            </form>
-            <ul class="logo__list">
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="../images/footer/Facebook.png" alt="Logotype Facebook" class="logo__list-img">
-                    </a>
-                </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="../images/footer/Twitter.png" alt="Logotype Twitter" class="logo__list-img">
-                    </a>
-                </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="../images/footer/Pinterest.png" alt="Logotype Pinterest" class="logo__list-img">
-                    </a>
-                </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="../images/footer/Instagram.png" alt="Logotype Instagram" class="logo__list-img">
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <h2 class="signature">Copyright © 2018 Dlk • Design Life Kids</h2>
-        <h2 class="signature">Web Design — Direct Line Development</h2>
+    <footer class="footer">
+        <div class="container block">
+            <section class="footer__title">
+                <ul class="footer__title-listfooter">
+                    <li class="footer__title-item">
+                        <p class="footer__title-text" tabindex="0">Navigation</p>
+                    </li>
+                    <li class="footer__title-item">
+                        <p class="footer__title-text" tabindex="0">Customer Information</p>
+                    </li>
+                    <li class="footer__title-item">
+                        <p class="footer__title-text" tabindex="0">Connect</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="footer__info">
+                <ul class="footer__info-list">
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">About Us</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Blog</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Design Services</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Featured On</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">2018 Holiday Catalog</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Shop By Designer</a>
+                    </li>
+                </ul>
+                <ul class="footer__info-aside">   
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Contact Us</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Sale Exclusions</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Shipping & Returns</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Terms & Conditions</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Privacy Policy</a>
+                    </li>
+                    <li class="footer__info-item text">
+                        <a class="footer__info-link" href="#">Search</a>
+                    </li>
+                </ul>
+                <ul class="footer__info-logo">
+                    <li class="footer__info-email">
+                        <form class="footer__info-form">
+                            <input class="footer__info-input" aria-label="0" type="email" name="Email" value="Email" required>
+                            <button class="footer__info-btn" tabindex="0" type="submit">JOIN</button>
+                        </form>
+                    </li>
+                    <li class="footer__info-icon">
+                        <a class="footer__info-link" href="#">
+                            <img class="footer__info-img" src="./images/footer/Facebook.png" alt="Logotype Facebook">
+                        </a>
+                    </li>
+                    <li class="footer__info-icon">
+                        <a class="footer__info-link" href="#">
+                            <img class="footer__info-img" src="./images/footer/Twitter.png" alt="Logotype Twitter">
+                        </a>
+                    </li>
+                    <li class="footer__info-icon">
+                        <a class="footer__info-link" href="#">
+                            <img class="footer__info-img" src="./images/footer/Pinterest.png" alt="Logotype Pinterest">
+                        </a>
+                    </li>
+                    <li class="footer__info-icon">
+                        <a class="footer__info-link" href="#">
+                            <img class="footer__info-img" src="./images/footer/Instagram.png" alt="Logotype Instagram">
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="footer__subtitle">
+                <ul class="footer__subtitle-list">
+                    <li class="footer__subtitle-item">
+                        <div class="footer__subtitle-rating">
+                            <p class="footer__subtitle-ratingStar" tabindex="0">Company Rating</p>
+                            <div class="footer__subtitle-group">
+                                <input class="footer__subtitle-star" type="radio" name="rating" value="one" aria-label="terrible" checked>
+                                <input class="footer__subtitle-star" type="radio" name="rating" value="two" aria-label="bearable">
+                                <input class="footer__subtitle-star" type="radio" name="rating" value="free" aria-label="normally">
+                                <input class="footer__subtitle-star" type="radio" name="rating" value="four" aria-label="fine">
+                                <input class="footer__subtitle-star" type="radio" name="rating" value="five" aria-label="wonderful">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="footer__subtitle-item">
+                        <p class="footer__subtitle-signature">Copyright © 2018 Dlk • Design Life Kids</p>
+                    </li>
+                    <li class="footer__subtitle-item">
+                        <a class="footer__subtitle-signature only" href="#"><p>Web Design — Direct Line Development</p></a>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </footer>
 </body>
 </html>
