--- a/pages/Catalog.html
+++ b/pages/Catalog.html
@@ -197,7 +197,7 @@
                         <p class="footer__subtitle-signature">Copyright © 2018 Dlk • Design Life Kids</p>
                     </li>
                     <li class="footer__subtitle-item">
-                        <a class="footer__subtitle-signature footer__subtitle-only" href="#"><p>Web Design — Direct Line Development</p></a>
+                        <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
                     </li>
                 </ul>
             </section>
