--- a/pages/Toys.html
+++ b/pages/Toys.html
@@ -64,9 +64,9 @@
     </section>
     <div class="div">
         <form class="div__form container">
-            <div class="div__form-range">
+            <div class="div__form-range" tabindex="0">
                 <p class="div__form-text" tabindex="0">Cost</p>
-                <input class="div__form-slider" tabindex="0" type="range" name="cost" min="0" max="500" value="108">
+                <input class="div__form-slider" aria-label="link to slider" type="range" name="cost" min="0" max="500" value="108">
                 <div class="div__form-numbers" tabindex="0">
                     <label>0</label>
                     <label>500</label>
